2006-08-14  Tom Tromey  <tromey@redhat.com>

	* Makefile.in: Rebuilt.
	* Makefile.am (libgcj_la_LIBADD): Add LIBMAGIC.
	* java/net/natVMURLConnection.cc: Wrote, based on Classpath.
	* configure, config.h.in: Rebuilt.
	* configure.ac: Check for magic.h and -lmagic.

2006-08-14  Tom Tromey  <tromey@redhat.com>

	* java/lang/natThread.cc (getId): Removed.
	* java/lang/Thread.java (threadId): New field.
	(totalThreadsCreated): Likewise.
	(Thread): Set threadId.
	(getId): No longer native.

2006-08-14  Tom Tromey  <tromey@redhat.com>

	* sources.am, Makefile.in: Rebuilt.
	* Makefile.am (nat_source_files): Added new .cc files.
	(libgcj-$(gcc_version).jar): Include 'sun'.
	(src.zip): Likewise.
	* java/lang/natThread.cc (getId): New stub.
	(getState): Likewise.
	* scripts/makemake.tcl (emit_source_var): Use -decreasing when
	sorting.
	* gnu/java/lang/management/natVMMemoryMXBeanImpl.cc: New file.
	* gnu/java/lang/management/natVMCompilationMXBeanImpl.cc: New file.
	* gnu/java/lang/management/natVMGarbageCollectorMXBeanImpl.cc: New
	file.
	* gnu/java/lang/management/natVMMemoryPoolMXBeanImpl.cc: New file.
	* gnu/java/lang/management/natVMMemoryManagerMXBeanImpl.cc: New file.
	* gnu/java/lang/management/natVMClassLoadingMXBeanImpl.cc: New file.
	* gnu/java/lang/management/natVMThreadMXBeanImpl.cc: New file.
	* gnu/java/nio/natVMChannel.cc: New file.
	* gcj/javaprims.h: Updated.
	* sources.am: Likewise.
	* java/lang/management/natVMManagementFactory.cc: New file.
	* java/net/natVMURLConnection.cc: New file.
	* java/util/concurrent/atomic/natAtomicLong.cc: New file.
	* sun/misc/natUnsafe.cc: New file.

2006-08-07  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* libjava/Makefile.in,
	* libjava/sources.am:
	Regenerated.
	* libjava/scripts/makemake.tcl:
	Added gconf and dnd peers as BC.

2006-08-07  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* libjava/Makefile.in,
	* libjava/sources.am:
	Regenerated.
	* libjava/scripts/makemake.tcl:
	Added external/jsr166.
	