@@ -1,6 +1,6 @@
 // natCore -- C++ side of Core
 
-/* Copyright (C) 2001, 2002, 2003, 2005  Free Software Foundation
+/* Copyright (C) 2001, 2002, 2003, 2005, 2006  Free Software Foundation
 
    This file is part of libgcj.
 
@@ -115,6 +115,6 @@ gnu::gcj::Core::create (jstring name)
 {
   gnu::gcj::Core *core = _Jv_create_core (root, name);
   if (core == NULL)
-    throw new java::io::IOException (JvNewStringLatin1 ("can't open core"));
+    throw new ::java::io::IOException (JvNewStringLatin1 ("can't open core"));
   return core;
 }
